# UWS-GEN_AI-Classes

./: .gitignore  main.py  pyproject.toml  requirements.txt
week-1/: Untitled-1.ipynb
week-1/logs/: events.out.tfevents.1758539976.Williams-MacBook-Air.local.62842.0
week-2/: Demo-2-Introduction-to-Generative-AI.ipynb  Lab-2-Introduction-to-Generative-AI.ipynb
week-3/: Demo-3.1-Natural-Language-Processing-and-Language-Modeling.ipynb  Demo-3.2-Tokens-and-Tokenization.ipynb  Demo-3.3-Word-Embeddings.ipynb
