[project]
name = "genai-applications"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pip>=25.2",
    "accelerate==1.8.1",
    "coqui-tts>=0.27.1",
    "diffusers==0.34.0",
    "gensim>=4.3.2",
    "gradio==5.36.2",
    "ipykernel>=6.30.1",
    "librosa==0.11.0",
    "nltk==3.9.1",
    "numba==0.61.2",
    "numpy>=2.2.6",
    "openai-whisper==20250625",
    "scikit-learn==1.7.0",
    "scipy==1.13.1",
    "sentencepiece==0.2.1",
    "spacy==3.8.7",
    "tokenizers==0.21.2",
    "torch==2.7.1",
    "transformers==4.52.1",
    "torchvision>=0.22.1",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.6",
]
[tool.uv.pip]
only-binary = ["gensim", ":all:"]   # or just ["gensim"]

